# ropemode

./: .hgtags  README.rst  generatetest.py  pyproject.toml  ropemodetest.py  setup.py
.github/workflows/: test.yml
ropemode/: __init__.py  decorators.py  environment.py  filter.py  interface.py  refactor.py
src/ropemode/: __init__.py  decorators.py  interface.py  refactor.py
tests/: test_dialog.py  test_generate.py
